--- a/DashboardNA/index.html
+++ b/DashboardNA/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="border-y-4 border-indigo-700 py-10 px-6 md:py-12 md:px-8 w-full">
                 <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-indigo-900">گزارش مدیریتی و تحلیلی شهرک نمک‌آبرود</h1>
-                <p class="text-lg md:text-xl text-slate-600 mt-4">شناسنامه پروژه‌های بالقوه</p>
+                <p class="text-lg md:text-xl text-slate-600 mt-4">شناسنامه تکمیل پروژه های زیرساختی</p>
                 <p class="text-sm text-slate-400 mt-12">بر اساس طرح بهنگام - شهریورماه 1404</p>
             </div>
         </header>
